--- a/css/molen_colors.css
+++ b/css/molen_colors.css
@@ -22,6 +22,11 @@
     display: flex;
     flex-flow: row nowrap;
 }
+.split_images {
+  display: flex;
+  flex: 0 0 40%;
+  flex-flow: column nowrap;
+}
 h1 {
     text-shadow: 1px 1px rgb(85,47,10);
 }
@@ -30,12 +35,14 @@ h7 {
 }
 
 @media screen and (orientation: portrait) {
-   .split_content {
-       flex: 0 0 100%;
-   }
-   .split_images {
-       display: none;
-   }
+   /* .split_content { */
+   /*     flex: 0 0 100%; */
+   /* } */
+   /*  .split_images { */
+   /*    display: flex; */
+   /*    flex: 0 0 40%; */
+   /*    flex-flow: column nowrap; */
+   /*  } */
    .navigation {
        padding-top: 30%;
        padding-top: 30vh;
@@ -50,11 +57,6 @@ h7 {
   .split_content {
       flex: 0 0 60%;
       padding-left: 2%;
-  }
-  .split_images {
-      display: flex;
-      flex: 0 0 40%;
-      flex-flow: column nowrap;
   }
   .article {
       padding-top: 30%;
