--- a/css/ump_style.css
+++ b/css/ump_style.css
@@ -3,6 +3,7 @@
 /* } */
 html {
     font-size: 62.5%;
+    padding-bottom: 30%;
 }
 body {
     background-color: black;
@@ -76,7 +77,11 @@ hr {
     color: #FFFFDF;
 }
 .article {
-    display: block;
+    display: flex;
+    flex-flow: column nowrap;
+    align-content: flex-start;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-basis: 80%;
     flex-grow: 1;
     flex-shrink: 1;
@@ -165,7 +170,7 @@ hr {
     align-items: flex-start;
     display: flex;
     flex-flow: row wrap;
-    position: absolute;
+    position: relative;
     height: 100%;
     align-contant: flex-start;
     justify-content: flex-start;
